Fix: Ensure viewer remains visible in viewport on long forms.

--- a/Resources/Public/CSS/styles.css
+++ b/Resources/Public/CSS/styles.css
@@ -836,6 +836,9 @@ ul.facets li a:hover {
     margin-bottom: 10px;
 }
 
+.form-nav {
+  background-color: var(--color-background);
+}
 
 @media (max-width: 1076px) {
     #crowdsourcing .info-box-wrapper .col-md-4 {
